Bug 126115 - FILESAVE XLSX Custom line chart marker settings not saved
Summary: FILESAVE XLSX Custom line chart marker settings not saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-06-26 14:24 UTC by NISZ LibreOffice Team
Modified: 2019-07-01 15:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original and exported document side by side in Excel and Calc (92.24 KB, image/png)
2019-06-26 14:25 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (21.00 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-26 14:26 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-06-26 14:24:41 UTC
Description:
When setting a custom line chart marker in Calc, or importing from xlsx, the custom marker setting is not retained and it is overwritten by the data series level setting.

Steps to Reproduce:
1.	Open attachment #152326 [details] from bug #126033
2.	Notice there is a custom line chart marker setting for both data series: for the first there is blue triangle and for the second there is “none”.
3.	For the second data points there is custom line marker set: for the first data series there is “none” and for the second data series there is an orange dot.
4.	Save the file as xlsx and reload it


Actual Results:
The data point level custom chart markers are gone and the data series level markers appear.

Expected Results:
Data point level chart markers should be retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 4808ae1c73597726c89936f5b9cb3f11c9a4a7bf
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-24_23:50:55
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-06-26 14:25:43 UTC
Created attachment 152426 [details]
Screenshot of the original and exported document side by side in Excel and Calc
Comment 2 NISZ LibreOffice Team 2019-06-26 14:26:05 UTC
Created attachment 152427 [details]
The original file saved by Calc
Comment 3 Durgapriyanka 2019-06-26 21:49:20 UTC
Thank you for reporting the bug.

I can reproduce the bug in 

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

But, I cannot reproduce the bug in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 Xisco Faulí 2019-06-27 11:44:41 UTC
Addding 'regression' based on comment 3 and moving to NEW
Comment 5 Xisco Faulí 2019-06-27 11:49:51 UTC
Actually I don't think this is a regression...
I can reproduce the current behaviour in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

and in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

both custom lines are displayed...
Comment 6 Commit Notification 2019-06-28 11:53:01 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0970a47ae926bb47458b846e9dc8ff6f3607250c%5E%21

tdf#126115 Chart OOXML Export: fix individual marker

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-07-01 14:17:21 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 9fbedb7929936a45967ae49bc15b985f95e2ebd3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!
Comment 8 Commit Notification 2019-07-01 15:29:23 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/157fd297127081abfa11f205d378bdabacf2f8df%5E%21

tdf#126115 Chart OOXML Export: fix individual marker

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.